# xmailer

./: AUTHORS  CMakeLists.txt  COPYING  README
bindings/pascal/: XMailer.dpk  XMailer.dproj  XMailer.lpk  XMailerEmail.pas  XMailerMessage.pas  XMailerSMTP.pas  XMailerUtils.pas  libxmailer.pas
bindings/pascal/Examples/: SendMail.dpr  SendMail.dproj  SendMail.lpi  frmMain.dfm  frmMain.lfm  frmMain.pas
examples/: getpass.c  getpass.h  sendmail.c
include/: xmailer.h
src/: xm_base.c  xm_macros.h  xm_smtp.c  xm_smtp.h  xm_smtp_defs.c  xm_smtp_defs.h  xm_strs.h  xm_utils.c
